sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:36: error: not found: value x
} while(x==true)
        ^