sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
	

do{
var f=getNombreValeurs()-2
var d=0
var x=false 

	x=false
	for(i<- d to f){
    
		if (plusPetit(i,i+1)==false){
			x=true			
			echange(i,i+1)
						}
		
         }
		if (x==false){
         	return
                  }
     f=f-1
     
	for(i<- f to d by -1){

		if (plusPetit(i,i+1)==false){
			x=true
			echange(i,i+1)
			 	       }
	} 	
	
          if(x==false){
         	return 
         }
	 d=d+1
} while(x==true)

 }
